<resources>
    <string name="app_name">PVR_Control</string>
    <string name="signIn">Acceder</string>
    <string name="signUp">Registrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">¿Has olvidado la contraseña?</string>
    <string name="no_valid_mail">Introduce un email valido</string>
    <string name="email_exists">El email ya existe</string>
    <string name="password_weak">La contraseña debe tener 8 caracteres</string>
    <string name="used_email">El email ya está en uso</string>
    <string name="name_surname">Nombre y apellidos titular</string>
    <string name="address">Direccion del PVR</string>
    <string name="name_Pvr">Nombre del PVR</string>
    <string name="phone">Teléfono</string>
    <string name="prefs_file">com.pedrosaez.pvr_control.PREFERENCES_FILE_KEY</string>
    <string name="prefs_file_flag">com.pedrosaez.pvr_control.PREFERENCES_FLAG</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="app_title">PVR Control</string>
    <string name="auth_date">Fecha inicio autorización</string>
    <string name="fields_cant_be_empty">Los campos nombre y datos del titular no pueden estar vacíos</string>
    <string name="no_data_found_to_update">No se encontraron datos para actualizar </string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="field_empty">El campo no puede estar vacío</string>
    <string name="password_too_short">La contraseña es demasiado corta</string>
    <string name="password_must_match">Las contraseñas deben coincidir</string>
    <string name="rails_numbers">Nº Carriles:</string>
    <string name="serial_number">Numero de serie:</string>
    <string name="model">Modelo:</string>
    <string name="brand">Marca:</string>
    <string name="brand_hint">Marca</string>
    <string name="model_hint">Modelo</string>
    <string name="serial_number_hint">Nº de serie</string>
    <string name="rails_number_hint">Nº de carriles</string>
    <string name="must_fill_fields">Debes rellenar todos los campos</string>
    <string name="get_out">Salir</string>
    <string name="total_sells">Introducir total ventas</string>
    <string name="total_bills">Introduce total billetes</string>
    <string name="total_coins">Introduce total monedas</string>
    <string name="sales">Ventas:</string>
    <string name="bills">Billetes:</string>
    <string name="coins">Monedas:</string>
    <string name="Parcials">Parciales</string>
    <string name="parcial_gains">Parcial Ganancia:</string>
    <string name="pvr_payment">Pago a Pvr:</string>
    <string name="total_gains">Total Ganancia:</string>
    <string name="total_pvr_payments">Total pagos a pvr:</string>
    <string name="parcial_outgoins">Parcial Gastos:</string>
    <string name="total_outgoins">Total gastos:</string>
    <string name="last_record">Último Registro</string>
    <string name="sales_money">Dinero de ventas:</string>
    <string name="help_add_register">Introduce los datos de los totales para iniciar la contabilidad de la máquina</string>
    <string name="amount">Importe:</string>
    <string name="Date">Fecha:</string>
    <string name="concept">Concepto:</string>
    <string name="machine_new_or_used">Necesitamos saber si la máquina que vas a usar es totalmente nueva o ya ha sido usada</string>
    <string name="new_machine">Nueva</string>
    <string name="used_machine">Usada</string>
    <string name="final_date">Fecha final</string>
    <string name="gain">Ganancia</string>
    <string name="outgoins">Gastos:</string>
    <string name="send">Enviar</string>
    <string name="select_range">Selecciona un rango de fechas:</string>
    <string name="choose_pvr">Elige un PVR:</string>
</resources>