<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_parcial_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Parcials"
            android:textAlignment="center"
            android:textColor="@color/secondaryTextColor"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_parcial_sells_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:text="@string/sales"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_parcial_label" />

        <TextView
            android:id="@+id/tv_parcial_sells"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/tv_parcial_sells_label"
            app:layout_constraintTop_toBottomOf="@id/tv_parcial_label"
            tools:text="34545" />

        <TextView
            android:id="@+id/tv_parcial_bills_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/bills"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_parcial_sells_label" />

        <TextView
            android:id="@+id/tv_parcial_bills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/tv_parcial_bills_label"
            app:layout_constraintTop_toBottomOf="@id/tv_parcial_sells"
            tools:text="234" />

        <TextView
            android:id="@+id/tv_parcial_coins_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/coins"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_parcial_bills_label" />

        <TextView
            android:id="@+id/tv_parcial_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/tv_parcial_coins_label"
            app:layout_constraintTop_toBottomOf="@id/tv_parcial_bills"
            tools:text="234" />

        <TextView
            android:id="@+id/tv_parcial_outgoins_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/parcial_outgoins"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_parcial_coins_label" />

        <TextView
            android:id="@+id/tv_parcial_outgoins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/tv_parcial_outgoins_label"
            app:layout_constraintTop_toBottomOf="@id/tv_parcial_coins_label"
            tools:text="234" />


        <TextView
            android:id="@+id/tv_pvr_payment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/pvr_payment"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_parcial_outgoins_label" />

        <TextView
            android:id="@+id/tv_pvr_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_pvr_payment_label"
            app:layout_constraintTop_toBottomOf="@id/tv_parcial_outgoins_label"
            tools:text="234" />

        <TextView
            android:id="@+id/tv_parcial_gains_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/parcial_gains"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pvr_payment" />

        <TextView
            android:id="@+id/tv_parcial_gains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_parcial_gains_label"
            app:layout_constraintTop_toBottomOf="@id/tv_pvr_payment_label"
            tools:text="234" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/bt_restart_parcials"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="44dp"
            android:backgroundTint="@color/primaryColor"
            android:src="@drawable/baseline_restart_alt_20"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_parcial_gains" />

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_parcial_gains_label" />

        <TextView
            android:id="@+id/tv_total_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Totales"
            android:textAlignment="center"
            android:textColor="@color/secondaryTextColor"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/tv_total_gains_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/total_gains"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total_label" />

        <TextView
            android:id="@+id/tv_total_gains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_total_gains_label"
            app:layout_constraintTop_toBottomOf="@id/tv_total_label"
            tools:text="233446" />

        <TextView
            android:id="@+id/tv_total_payment_pvr_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/total_pvr_payments"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total_gains_label" />

        <TextView
            android:id="@+id/tv_total_payment_pvr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_total_payment_pvr_label"
            app:layout_constraintTop_toBottomOf="@id/tv_total_gains_label"
            tools:text="233446" />

        <TextView
            android:id="@+id/tv_total_outgoins_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/total_outgoins"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total_payment_pvr_label" />

        <TextView
            android:id="@+id/tv_total_outgoins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_total_outgoins_label"
            app:layout_constraintTop_toBottomOf="@id/tv_total_payment_pvr_label"
            tools:text="233446" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
